# findle-app

./: .gitignore  .pre-commit-config.yaml  GIT_WORKFLOW.md  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci-backend.yaml  ci-frontend.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/scripts/: init_db.sh  init_db_dev.sh
backend/src/: app.py  models.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: auth.py  authors.py  books.py  superuser.py  users.py
backend/src/core/: database.py  security.py  settings.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 4fc0e435a08d_create_tables.py  add_price_to_books.py
backend/src/schemas/: authors.py  base.py  books.py  users.py
backend/src/services/: author_service.py  book_service.py  user_service.py
backend/src/utils/: __init__.py  create_superuser.py  populate_table.py
backend/tests/: conftest.py  test_superuser_creation.py
backend/tests/routes/: test_app.py  test_auth.py  test_author.py  test_book.py  test_root.py  test_security.py  test_superuser.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: authApi.ts  (+4 more)
k8s/: apply-secrets.sh  backend-configmap.yaml  backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  cluster-issuer.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  postgres-configmap.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  secrets.env.example
(+26 files in other folders)
